syntax = "proto3";

package device;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

// Device holds the current state of a customer's device
message Device {
	uint32 ID = 1;
	uint32 CompanyID = 2;
	string Name = 3;
	string Type = 4;
	string Subtype = 5;
	string Description = 6;
	string SNMPIP = 7;
	string SNMPCommunity = 8;
	string FlowType = 9;
	bool MinimizeSNMP = 10;
	string CompanyStatus = 11;
	string Alert = 12;
	string Tee = 13;
	uint32 ShardNumber = 14;
	uint32 SampleRate = 15;
	string Status = 16;
	uint32 MaxInterface = 17;
	uint32 MaxInterfaceCheck = 18;
	string DNSTag = 19;
	string SNMPV3ConfigJSON = 20;
	string GNMIV1ConfJSON = 21;
	int64 EditDateUnixNano = 22;
	Site Site = 23 [(gogoproto.nullable) = false];
	Plan Plan = 24 [(gogoproto.nullable) = false];
	string Manufacturer = 25;
	string Role = 26;
	string CloudRegion = 27;
	string SysName = 28;
	string SysContact = 29;
	string SysLocation = 30;
	string SysServices = 31;
	string SysObjectID = 32;
}

// Site holds Site info about a customer's device
message Site {
	reserved 5;
	uint32 ID = 1;
	string Name = 2;
	string Country = 3;
	string Type = 4;
	repeated SiteArchitecture Architecture = 6 [(gogoproto.nullable) = false];
}

// SiteArchitecture holds the architecture for a site
message SiteArchitecture {
	repeated Sublayer Sublayers = 1 [(gogoproto.nullable) = false];
}

// Sublayer for a site architecture
message Sublayer {
	string Name = 1;
}

// Plan holds Plan info about a customer's device
message Plan {
	uint32 ID = 1;
	uint32 MaxFPS = 2;
	uint32 MaxBigDataFPS = 3;
	uint32 MaxActive = 4;
	bool Active = 5;
	bool BGP = 6;
	uint32 MaxDevices = 7;
	uint32 FastRetentionDays = 8;
	uint32 FullRetentionDays = 9;
	int64 EditDateUnixNano = 10;
}
